[package]
name = "application-controller"
version = "0.1.0"
edition = "2018"

[dependencies]
kube = "0.32.1"
kube-derive = "0.32.1"
k8s-openapi = { version = "0.7.1", default-features = false, features = ["v1_16"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.51"
futures = "0.3.4"
anyhow = "1.0.28"
tokio = { version = "0.2.18", features = ["full"] }