[package]
name = "application-operator"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.28"
futures = "0.3.4"
handlebars = "3.0.1"
k8s-openapi = { version = "0.7.1", default-features = false, features = ["v1_16"] }
kube = { version = "0.32.1", default-features = false, features = ["rustls-tls"] }
kube-derive = "0.32.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.51"
serde_yaml = "0.8.11"
structopt = { version = "0.3" }
tokio = { version = "0.2.18", features = ["full"] }
